// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Labels when default mode renders labels after event 1`] = `
<Styled(div)
  isSimpleMode={false}
>
  <Styled(div)
    bold={true}
    color="white"
    key="French Openwhite"
    layer={3}
  >
    French Open
  </Styled(div)>
  <Styled(div)
    color="blue"
    key="Men's singles | Finalblue"
    layer={2}
  >
    Men's singles | Final
  </Styled(div)>
  <Styled(div)
    color="cyan"
    key="Resultcyan"
    layer={1}
  >
    Result
  </Styled(div)>
</Styled(div)>
`;

exports[`Labels when default mode renders labels before event 1`] = `
<Styled(div)
  isSimpleMode={false}
>
  <Styled(div)
    bold={true}
    color="white"
    key="French Openwhite"
    layer={2}
  >
    French Open
  </Styled(div)>
  <Styled(div)
    color="blue"
    key="Men's singles | Finalblue"
    layer={1}
  >
    Men's singles | Final
  </Styled(div)>
</Styled(div)>
`;

exports[`Labels when default mode renders labels live event 1`] = `
<Styled(div)
  isSimpleMode={false}
>
  <Styled(div)
    bold={true}
    color="white"
    key="French Openwhite"
    layer={3}
  >
    French Open
  </Styled(div)>
  <Styled(div)
    color="blue"
    key="Men's singles | Finalblue"
    layer={2}
  >
    Men's singles | Final
  </Styled(div)>
  <Styled(div)
    color="red"
    key="Livered"
    layer={1}
  >
    <Styled(div)>
      •
    </Styled(div)>
    Live
  </Styled(div)>
</Styled(div)>
`;

exports[`Labels when isSimpleMode renders labels in simple mode 1`] = `
<Styled(div)
  isSimpleMode={true}
>
  <Styled(div)
    key="WORLD  CUPundefined"
    layer={3}
  >
    WORLD  CUP
  </Styled(div)>
  <Styled(div)
    key="LIGUE 1undefined"
    layer={2}
  >
    LIGUE 1
  </Styled(div)>
  <Styled(div)
    key="PARIS SAINT GERMAINundefined"
    layer={1}
  >
    PARIS SAINT GERMAIN
  </Styled(div)>
</Styled(div)>
`;
